static in database

--- a/style/navbar.style.css
+++ b/style/navbar.style.css
@@ -24,7 +24,7 @@ nav {
   padding: 10px 15px;
   display: block;
 }
-.nav-item a:hover, #logo:hover {
+.nav-item a:hover, #logo:hover path {
   color: orange;
 }
 
